--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     </header>
     
     <section id="social">
-        <img src="assets/facebook.png">
-        <img src="assets/instagram.png">
-        <img src="assets/linkedin.png">
-        <img src="assets/twitter.png">
+        <img href="#" src="assets/facebook.png">
+        <img href="#" src="assets/instagram.png">
+        <img href="#" src="assets/linkedin.png">
+        <img href="#" src="assets/twitter.png">
     </section>
 
-    <section id="primary">
-        <div class="gauche">
+    <section id="first">
+        <div class="left">
             <h1>MyDigitalSchool :<br> Cours sur Git,<br> Github, HTML et CSS</h1>
             <span class="square"></span>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique atque neque a quisquam 
@@ -49,7 +49,7 @@
     </section>
 
     <section id="second">
-        <div class="GG">
+        <div class="metho">
             <img src="assets/methodologie-travail.png">
         </div>
         <div class="droite">
@@ -68,9 +68,9 @@
         </div>
     </section>
 
-    <section id="competences">
-        <div class="competences">
-            <div class="idee-projet">
+    <section id="skill">
+        <div class="skill">
+            <div class="idea-project">
                 <img src="assets/idee-projet.png">
                 <h3>L'idée du projet</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
@@ -87,13 +87,13 @@
             </div>
 
         </div>
-        <div class="btncompt">
+        <div class="btnskill">
             <button>Découvrez les compétences</button>
         </div>
     </section>
 
     <section id="three">
-        <div class="gauche">
+        <div class="left">
             <h2>Présentation de la classe</h2> 
             <span class="square"></span>
             <p>Le cursus de 2e année de Bachelor au sein de MyDigitalSchool est assez généraliste. 
@@ -107,13 +107,13 @@
                 <span class="line-3"></span>
             </div>
         </div>
-        <div id="DD">
+        <div id="presentation">
             <img src="assets/presentation-classe.png">
         </div>
     </section>
 
     <section id="four">
-        <div class="GG">
+        <div class="metho">
             <img src="assets/travail-equipe.png">
         </div>
         <div class="droite">
@@ -133,7 +133,7 @@
     </section>
 
     <section id="five">
-        <div class="gauche">
+        <div class="left">
             <h2>Envoie nous un message !</h2> 
             <form action="/ma-page-de-traitement" method="post">
                 <div>
@@ -159,39 +159,39 @@
                 <span class="line-3"></span>
             </div>
         </div>
-        <div id="DD">
+        <div id="presentation">
             <img src="assets/envoie-message.png">
         </div>
     </section>
 
     <footer>
         <hr>
-        <div id="col-footer">
-            <div class="col-dvi">
+        <div id="menu-footer">
+            <div class="menu-dvi">
                 <h3>Titre 1</h3>
                 <a href="">Lien 1</a>
                 <a href="">Lien 2</a>
             </div>
-            <div class="col-dvi">
+            <div class="menu-dvi">
                 <h3>Titre 2</h3>
                 <a href="">Lien 1</a>
                 <a href="">Lien 2</a>
             </div>
-            <div class="col-dvi">
+            <div class="menu-dvi">
                 <h3>Titre 3</h3>
                 <a href="">Lien 1</a>
                 <a href="">Lien 2</a>
             </div>
-            <div class="col-dvi">
+            <div class="menu-dvi">
                 <h3>Titre 4</h3>
                 <a href="">Lien 1</a>
                 <a href="">Lien 2</a>
             </div>
-            <div class="col-dvi">
+            <div class="menu-dvi">
                 <p>MyDigitalSchool</p>
-                <p>Copyright © Paul Collas</p>
+                <p>Copyright © 2022 Paul Collas</p>
             </div>
-            <div class="col-dvi">
+            <div class="menu-dvi">
                 <img src="assets/favicon.ico">
                 <button>Pédagogique</button>
             </div>
